--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -328,7 +328,7 @@
             </ul>
           </li>
           <li class="nav-item">
-              <a asp-controller="FAQ" asp-action="AdminIndex" class="nav-link">
+              <a asp-area="admin" asp-controller="FAQAnswer" asp-action="Index" class="nav-link">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
                 <p>
                   FAQ
