update font awesome version

--- a/My Blog Website/Areas/Admin/Views/FAQAnswer/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/FAQAnswer/Index.cshtml
@@ -95,7 +95,7 @@
         </div>
 
         <div class="unanswered-section">
-            <h3>Unanswered Questions</h3>
+            <h3 style="margin-left: auto; margin-right: auto; width: 80%">Unanswered Questions</h3>
             <select id="unansweredDropdown" class="form-control">
                 <option value="">Loading questions...</option>
             </select>
