--- a/My Blog Website/Areas/Admin/Views/Posts/Single.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Single.cshtml
@@ -37,14 +37,14 @@
                         <a href="https://www.facebook.com/sharer/sharer.php?u=@encodedUrl" 
                            target="_blank" 
                            class="btn btn-sm btn-primary">
-                            <i class="fa fa-facebook"></i> Facebook
+                            <i class="fa-brands fa-facebook"></i> Facebook
                         </a>
 
                         <!-- Twitter/X -->
                         <a href="https://twitter.com/intent/tweet?text=@encodedTitle&url=@encodedUrl" 
                            target="_blank" 
                            class="btn btn-sm btn-info">
-                            <i class="fa fa-twitter"></i> Twitter
+                            <i class="fa-brands fa-x-twitter"></i> Twitter
                         </a>
 
                         <!-- LinkedIn -->
@@ -52,7 +52,7 @@
                            target="_blank" 
                            class="btn btn-sm btn-primary" 
                            style="background-color: #0077b5; border-color: #0077b5;">
-                            <i class="fa fa-linkedin"></i> LinkedIn
+                            <i class="fa-brands fa-linkedin"></i> LinkedIn
                         </a>
 
                         <!-- WhatsApp -->
