--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="~/css/media_query.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="~/css/animate.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="~/css/owl.carousel.css" rel="stylesheet" type="text/css"/>
@@ -41,16 +41,16 @@
                         </div>
 
                         <div class="text-center d-inline-block">
-                            <a class="fh5co_display_table" href="https://www.linkedin.com/in/radipu/" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
+                            <a class="fh5co_display_table" href="https://www.linkedin.com/in/radipu/" target="_blank"><div class="fh5co_verticle_middle"><i class="fa-brands fa-linkedin"></i></div></a>
                         </div>
                         <div class="text-center d-inline-block">
-                            <a class="fh5co_display_table" href="https://github.com/radipu" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-github"></i></div></a>
+                            <a class="fh5co_display_table" href="https://github.com/radipu" target="_blank"><div class="fh5co_verticle_middle"><i class="fa-brands fa-github"></i></div></a>
                         </div>
                         <div class="text-center d-inline-block">
-                            <a class="fh5co_display_table" href="https://twitter.com/radipu" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-twitter"></i></div></a>
+                            <a class="fh5co_display_table" href="https://twitter.com/radipu" target="_blank"><div class="fh5co_verticle_middle"><i class="fa-brands fa-x-twitter"></i></div></a>
                         </div>
                         <div class="text-center d-inline-block">
-                            <a class="fh5co_display_table" href="https://fb.com/radipu13" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div></a>
+                            <a class="fh5co_display_table" href="https://fb.com/radipu13" target="_blank"><div class="fh5co_verticle_middle"><i class="fa-brands fa-facebook"></i></div></a>
                         </div>
 
                         <div class="flag-selector">
@@ -174,16 +174,16 @@
                 </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://linkedin.com/in/radipu" target="_blank">
-                        <div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div>
+                        <div class="fh5co_verticle_middle"><i class="fa-brands fa-linkedin"></i></div>
                     </a></div>
                     <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://github.com/radipu" target="_blank">
-                        <div class="fh5co_verticle_middle"><i class="fa fa-github"></i></div>
+                        <div class="fh5co_verticle_middle"><i class="fa-brands fa-github"></i></div>
                     </a></div>
                     <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://twitter.com/radipu" target="_blank">
-                        <div class="fh5co_verticle_middle"><i class="fa fa-twitter"></i></div>
+                        <div class="fh5co_verticle_middle"><i class="fa-brands fa-x-twitter"></i></div>
                     </a></div>
                     <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://facebook.com/radipu13" target="_blank">
-                        <div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div>
+                        <div class="fh5co_verticle_middle"><i class="fa-brands fa-facebook"></i></div>
                     </a></div>
                 </div>
             </div>
