--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -113,7 +113,7 @@
                                         <a href="">Projects</a>
                                         <a href="https://graphics.radipu.com/" target="_blank">Graphics</a>
                                         <a href="https://cv.radipu.com/" target="_blank">Resume</a>
-                                        <a href="https://radipu.com/" target="_blank">My Intro</a>
+                                        <a href="https://intro.radipu.com/" target="_blank">My Intro</a>
                                     </div>
                                 </div>
                                 @*<li class="nav-item dropdown">
