last modified posts are showing and working

--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -207,15 +207,7 @@
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
                 <div class="footer_main_title py-3"> Last Modified Posts</div>
-                <a href="#" class="footer_img_post_6"><img src="~/images/allef-vinicius-108153.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/32-450x260.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/download (1).jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/science-578x362.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/vil-son-35490.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/zack-minor-15104.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/download.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/download (2).jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="~/images/ryan-moreno-98837.jpg" alt="img"/></a>
+                @await Component.InvokeAsync("LastModifiedPosts")
             </div>
         </div>
         @if (TempData["Message"] != null)
