added new category 'project' and updated last modified and publish date sorting

--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -93,6 +93,10 @@
                             <input type="checkbox" class="form-check-input" id="check7" value="Book-Review">
                             <label class="form-check-label" for="check7">Book Review</label>
                         </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="check8" value="Project">
+                            <label class="form-check-label" for="check8">Project</label>
+                        </div>
                     </div>
                     <hr />
 
