--- a/My Blog Website/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Edit.cshtml
@@ -97,6 +97,10 @@
                                 <input type="checkbox" class="form-check-input category-checkbox" id="check7" value="Book-Review" @(categories.Contains("Book-Review") ? "checked" : "")>
                                 <label class="form-check-label" for="check7">Book Review</label>
                             </div>
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input category-checkbox" id="check8" value="Project" @(categories.Contains("Project") ? "checked" : "")>
+                                <label class="form-check-label" for="check8">Project</label>
+                            </div>
                         </div>
                         <hr />
 
