--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
                                      <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton2" data-toggle="dropdown"
                                      aria-haspopup="true" aria-expanded="false">Portfolio <span class="sr-only">(current)</span></a>
                                     <div class="dropdownmenu-content">
-                                        <a href="">Projects</a>
+                                        <a asp-controller="Project" asp-action="Index">Projects</a>
                                         <a href="https://graphics.radipu.com/" target="_blank">Graphics</a>
                                         <a href="https://cv.radipu.com/" target="_blank">Resume</a>
                                         <a href="https://intro.radipu.com/" target="_blank">My Intro</a>
