--- a/My Blog Website/Views/Home/Index.cshtml
+++ b/My Blog Website/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model My_Blog_Website.ViewModels.HomeViewModel
 @using My_Blog_Website.Helpers
 @using My_Blog_Website.ViewModels
+
 @{
     ViewData["Title"] = "Home";
 }
@@ -370,6 +371,7 @@
                                     </div>
                                 }
                             </div>
+                            <!--Tags and Most popular posts-->
                             <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                 <div>
                                     <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Tags</div>
@@ -391,41 +393,29 @@
                                 <div>
                                     <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
                                 </div>
-                                <div class="row pb-3">
-                                    <div class="col-5 align-self-center">
-                                        <img src="images/download (1).jpg" alt="img" class="fh5co_most_trading"/>
-                                    </div>
-                                    <div class="col-7 paddding">
-                                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-                                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
-                                    </div>
-                                </div>
-                                <div class="row pb-3">
-                                    <div class="col-5 align-self-center">
-                                        <img src="images/allef-vinicius-108153.jpg" alt="img" class="fh5co_most_trading"/>
-                                    </div>
-                                    <div class="col-7 paddding">
-                                        <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
-                                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
-                                    </div>
-                                </div>
-                                <div class="row pb-3">
-                                    <div class="col-5 align-self-center">
-                                        <img src="images/download (2).jpg" alt="img" class="fh5co_most_trading"/>
-                                    </div>
-                                    <div class="col-7 paddding">
-                                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-                                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
-                                    </div>
-                                </div>
-                                <div class="row pb-3">
-                                    <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
-                                                                              class="fh5co_most_trading"/></div>
-                                    <div class="col-7 paddding">
-                                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-                                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
-                                    </div>
-                                </div>
+                                @if (ViewBag.PopularPosts != null && ViewBag.PopularPosts.Count > 0)
+                                {
+                                    foreach (var popularPost in ViewBag.PopularPosts)
+                                    {
+                                        <div class="row pb-3">
+                                            <div class="col-5 align-self-center">
+                                                <img src="@popularPost.FeatureImageUrl" alt="img" class="fh5co_most_trading"/>
+                                            </div>
+                                            <div class="col-7 paddding">
+                                                <a href="/@popularPost.Categories/@popularPost.Slug" class="d-block most_fh5co_treding_font">
+                                                    @popularPost.Title
+                                                </a>
+                                                <div class="most_fh5co_treding_font_123">
+                                                    @popularPost.PublishedDate?.ToString("MMM dd, yyyy")
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                }
+                                else
+                                {
+                                    <p>No popular posts found.</p>
+                                }
                             </div>
                         </div>
                         <ul class="pagination justify-content-center" id="carousel-pagination"></ul>
