--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -160,10 +160,11 @@
             @* <div class="col-12 spdp_right py-5"><img src="~/images/radipu LOGO_white.png" alt="img" class="footer_logo"/></div> *@
             <div class="clearfix"></div>
             <div class="col-12 spdp_right py-3">
-                <div class="footer_main_title py-3"> Download Now</div>
+                @* <div class="footer_main_title py-3"> Download Now</div> *@
+                <div class="footer_main_title py-3"> </div> @* remove it when app is ready *@
                 <div class="footer_sub_about pb-3">
-                    <a href="https://facebook.com/rad.pb13" target="_blank"><img src="~/images/google-play-badge.png" alt="img" class="google-play" /></a>
-                    <a href="https://facebook.com/radipu13" target="_blank"><img src="~/images/App Store.svg" alt="img" class="app-store"/></a>
+                    <a href="https://facebook.com/rad.pb13" target="_blank">@* <img src="~/images/google-play-badge.png" alt="img" class="google-play" /> *@</a>
+                    <a href="https://facebook.com/radipu13" target="_blank">@* <img src="~/images/App Store.svg" alt="img" class="app-store"/> *@</a>
                 </div>
             </div>
             <div class="col-12 col-md-4 col-lg-3">
