--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -28,12 +28,11 @@
         <input type="hidden" asp-for="FeatureImageUrl" id="featuredImageData" />
 
         <div class="col-lg-12 page-main">
+            <!--Main Content-->
             <div class="new-post">
-                <input type="text" class="title-input" placeholder="Post title" 
-                       asp-for="Title" id="post_title" />
+                <input type="text" class="title-input" placeholder="Post title" asp-for="Title" id="post_title" />
                 <textarea id="post_text" asp-for="PostContent"></textarea>
-                <input type="text" class="description-input" placeholder="What the post about?" 
-       asp-for="PostDescription" id="post_title" />
+                <input type="text" class="description-input" placeholder="What the post about?" asp-for="PostDescription" id="post_title" />
             </div>
             <!-- Sidebar -->
             <div id="rightsidebar" class="collapsed">
